# python_template

./: .env.ci  .env.example  .gitignore  README.md  mise.toml  plot_result.eps  pyproject.toml  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: default-template.md
.github/workflows/: ci.yml
environments/dev/: Dockerfile  Dockerfile.nvidia  compose.nvidia.yaml  compose.yaml  package.txt  python-requirements.txt
src/: example.py
tests/: test_example.py
