[project]
name = "your-project-name"
version = "0.1.0"
description = "your project description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.6.10,<8",
    "mypy>=1.15.0,<2",
    "ruff>=0.9.5,<0.10",
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "ipykernel>=6.29.5,<7",
    "ipywidgets>=8.1.5,<9",
    "poethepoet>=0.32.2,<0.33",
]

[tool.uv]
package = false
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# NOTE: please set here based on your Python version.
target-version = "py312"

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["E", "F", "I"]
# E203: Whitespace before ':'. (See https://github.com/psf/black/blob/f51e53726b39a177355a7917c91c56f390dda7ef/docs/guides/using_black_with_other_tools.md#flake8)
# E501: Line too long. (Leave it to auto-formatter)
# E741: Do not use variables named 'I', 'O', or 'l'.
ignore = ["E203", "E501", "E741"]
# Disable fix for unused imports (`F401`).
# unfixable = ["F401"]

[tool.ruff.format]
# The format settings follow black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.12"
show_column_numbers = true
strict = true
allow_untyped_calls = true

[tool.pyright]
typeCheckingMode = "off"

[tool.poe.tasks]
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "ruff format src tests"
test = "pytest -v tests"
test-coverage = "pytest -v --cov=src tests"
test-module = "python -m pytest -v"
type-check = "mypy src tests"
